# LaneAssist

./: CMakeLists.txt  LICENSE  README.md  config.ini  main.cpp  main.py
Release/: lanedetection
for_neural_nets/: RNN.py  data_helper.py  dataset_augmentation.py  detect.py  labeling.py  main.py
gifs/competition-roads/: readme.md
gifs/real-roads/: readme.md
src/LaneDetection/: detect.cpp  detect.hpp  detect.py  helpers.hpp
src/LaneKeeping/: lanekeeping.cpp  lanekeeping.hpp  lanekeeping.py
testing/: histogram.py  horizontal.py
